--- a/index.css
+++ b/index.css
@@ -160,10 +160,35 @@ article.product .product-buttons {
     margin-bottom: 20px;
     margin-top: -25px;
 }
-.catalog
+main .board .catalog
 {
     display: inline-block;
-    position: relative;
+    font-size: 30px;
+    font-family: 'Josefin Sans', sans-serif;
+    margin-top: 14px;
+}
+main .board .search
+{
+    display: inline-block;
+    position: absolute;
+    border-radius: 10px;
+    width: 200px;
+    margin-top: 17px;
+    height: 25px;
+    left: 80%;
+}
+@media (max-width: 1556px) {
+    .main .board .search {
+        width: 180px;
+    }
+}
+main .board .filter
+{
+    display: inline-block;
+    position: absolute;
+    left: 93%;
+    margin-top: 17px;
+    height: 25px;
 }
 .filter
 {
